changes for QR code app quiz

--- a/app/index.html
+++ b/app/index.html
@@ -72,6 +72,8 @@
     <script src="scripts/qrclient.js"></script>
     <!-- endbuild -->
 
+	<!-- no longer need to import these here, because webwork is now importing them -->
+	<!--
     <script type="text/javascript" src="scripts/jsqrcode/grid.js"></script>
     <script type="text/javascript" src="scripts/jsqrcode/version.js"></script>
     <script type="text/javascript" src="scripts/jsqrcode/detector.js"></script>
@@ -89,6 +91,7 @@
     <script type="text/javascript" src="scripts/jsqrcode/findpat.js"></script>
     <script type="text/javascript" src="scripts/jsqrcode/alignpat.js"></script>
     <script type="text/javascript" src="scripts/jsqrcode/databr.js"></script>
+	-->
 
     <script>
     if('serviceWorker' in navigator) {
